--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "babel": "^5.8.19",
     "kinto": "^1.2.0",
-    "lru-cache": "^4.0.0"
+    "lru-cache": "^4.0.0",
+    "md5": "^2.0.0",
+    "uuid": "^2.0.1"
   }
 }
