--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "babel": "^5.8.19",
+    "isomorphic-fetch": "^2.2.1",
     "kinto": "^1.2.0",
     "lru-cache": "^4.0.0",
     "md5": "^2.0.0",
