--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "tdd": "node_modules/.bin/mocha -w --compilers js:babel/register 'tests/*_test.js'"
+    "tdd": "node_modules/.bin/mocha -w --compilers js:babel/register 'tests/*_test.js'",
+    "test": "node_modules/.bin/mocha --compilers js:babel/register 'tests/*_test.js'"
   },
   "repository": {
     "type": "git",
