--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai-as-promised": "^5.0.0",
     "eslint": "^1.2.0",
     "mocha": "^2.4.5",
+    "node-localstorage": "^1.1.2",
     "sinon": "^1.14.1"
   },
   "dependencies": {
